--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -39,6 +39,8 @@
         app:layout_constraintTop_toBottomOf="@id/search_edit_text"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/search_item"/>
 
