--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -17,7 +17,7 @@
         android:id="@+id/search_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="enter any text to search a pic"
+        android:hint="@string/search_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintRight_toLeftOf="@+id/search_button"
@@ -27,21 +27,42 @@
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="search"
+        android:text="@string/search_btn_title"
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
         app:layout_constraintRight_toRightOf="@id/toolBar"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="@dimen/common_margin"
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/search_edit_text"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/common_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/search_item"/>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/search_rv"
+        app:layout_constraintBottom_toBottomOf="@id/search_rv"
+        app:layout_constraintRight_toRightOf="@id/search_rv"
+        app:layout_constraintLeft_toLeftOf="@id/search_rv"
+        android:visibility="invisible"/>
+    <TextView
+        android:id="@+id/info_tv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/search_rv"
+        app:layout_constraintBottom_toBottomOf="@id/search_rv"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="@dimen/common_margin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:visibility="invisible"
+        android:text="@string/welcome_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
