--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,14 +5,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.SearchFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolBar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:theme="@style/Theme.SearchFlickr"
-        />
+        android:theme="@style/Theme.SearchFlickr">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
+
     <EditText
         android:id="@+id/search_edit_text"
         android:layout_width="0dp"
@@ -28,9 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search_btn_title"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar"
-        app:layout_constraintRight_toRightOf="@id/toolBar"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintRight_toRightOf="@id/app_bar"
         android:layout_marginEnd="@dimen/common_margin"
+        android:layout_marginTop="@dimen/common_margin"
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_rv"
@@ -38,6 +45,7 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/search_edit_text"
         android:layout_marginTop="@dimen/common_margin"
+        android:layout_marginLeft="@dimen/common_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         app:spanCount="2"
