--- a/app/src/main/res/layout/fragment_search_history.xml
+++ b/app/src/main/res/layout/fragment_search_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dialog.SearchHistoryDialog">
+    tools:context=".ui.dialog.SearchHistoryDialog">
 
     <ListView
         android:id="@+id/search_history_lv"
