--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.njuacha.searchflickr.fragment.SearchFragment"
+        android:name="com.njuacha.searchflickr.ui.fragment.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <dialog
         android:id="@+id/searchHistoryDialog"
-        android:name="com.njuacha.searchflickr.dialog.SearchHistoryDialog"
+        android:name="com.njuacha.searchflickr.ui.dialog.SearchHistoryDialog"
         android:label="fragment_search_history"
         tools:layout="@layout/fragment_search_history" />
 
