--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         app:spanCount="2"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         tools:listitem="@layout/search_item"/>
     <ProgressBar
         android:id="@+id/progress_bar"
